--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,15 +11,13 @@ dependencies:
   # BSD
   # timezone: ^0.5.7
   # BSD
-  intl: '>=0.16.1 <=0.17.0'
+  intl: "0.18.0"
   # Apache 2.0
   image: ^3.2.0
   path: ^1.8.2
 
   # MIT
   xml: ^6.1.0 #xml: '>=4.3.0 <=5.1.2'
-
-
 
 dev_dependencies:
   lints: ^2.0.0
