--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   # BSD
   # timezone: ^0.5.7
   # BSD
-  intl: "0.18.0"
+  intl: ^0.18.0
   # Apache 2.0
   image: ^3.2.0
   path: ^1.8.2
